<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textintro"
            android:textStyle="bold"
            android:textSize="24sp" android:layout_marginTop="8dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/donut_circle"
            android:id="@+id/donut" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textintro" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:contentDescription="@string/donuts"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/icecream_circle"
            android:id="@+id/ice_cream"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/donut"
            android:contentDescription="@string/ice_cream_sandwiches"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/froyo_circle"
            android:id="@+id/froyo" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ice_cream" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:contentDescription="@string/froyo"/>
    <TextView
            android:text="@string/donuts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/donut_description" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/donut" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toEndOf="@+id/donut"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/ice_cream_sandwiches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ice_cream_description" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/ice_cream" app:layout_constraintStart_toEndOf="@+id/ice_cream"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"/>
    <TextView
            android:text="@string/froyo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/froyo_description" app:layout_constraintStart_toEndOf="@+id/froyo"
            android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/froyo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"/>
    <Button
            android:text="@string/alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alert_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/date_button"/>
    <Button
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_button" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/date_button"
            android:layout_marginStart="16dp"/>

</android.support.constraint.ConstraintLayout>
